<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>github.com.mstepan</groupId>
    <artifactId>grcp-examples</artifactId>
    <version>0.0.1</version>

    <properties>
        <!-- project properties -->
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- dependencies -->
        <assertj.version>3.15.0</assertj.version>
        <grpc.version>1.64.0</grpc.version>
        <junit.bom.version>5.5.2</junit.bom.version>
        <mockito-version>2.21.0</mockito-version>
        <protoc.version>3.25.1</protoc.version>

        <!-- maven plugins -->
        <compiler.plugin.version>3.11.0</compiler.plugin.version>
        <enforcer.plugin.version>3.4.1</enforcer.plugin.version>
        <shade.plugin.version>3.4.0</shade.plugin.version>
        <surefire.plugin.version>3.0.0-M4</surefire.plugin.version>
    </properties>

    <build>

        <!--
        Required for below grcp compiler
        https://github.com/trustin/os-maven-plugin
        -->
        <extensions>
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>1.7.1</version>
            </extension>
        </extensions>

        <plugins>

            <!-- grpc compiler -->
            <plugin>
                <groupId>org.xolstice.maven.plugins</groupId>
                <artifactId>protobuf-maven-plugin</artifactId>
                <version>0.6.1</version>
                <configuration>
                    <protocArtifact>com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}
                    </protocArtifact>
                    <pluginId>grpc-java</pluginId>
                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
                    </pluginArtifact>
                    <protoSourceRoot>src/main/resources</protoSourceRoot>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>compile-custom</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Spotless is a general-purpose formatting plugin. It is completely Ã la carte,
          but also includes powerful "batteries-included" if you opt-in
          https://github.com/diffplug/spotless/tree/master/plugin-maven -->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.37.0</version>
                <configuration>
                    <java>
                        <removeUnusedImports/>
                        <googleJavaFormat>
                            <version>1.17.0</version>
                            <!-- Optional, available versions: GOOGLE, AOSP
                            https://github.com/google/google-java-format/blob/master/core/src/main/java/com/google/googlejavaformat/java/JavaFormatterOptions.java -->
                            <style>AOSP</style>
                        </googleJavaFormat>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>format-sources</id>
                        <goals>
                            <goal>apply</goal>
                        </goals>
                        <phase>process-sources</phase>
                    </execution>
                </executions>
            </plugin>

            <!-- Java compiler plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler.plugin.version}</version>
                <configuration>
                    <release>${java.version}</release>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>--add-modules</arg>
                        <arg>jdk.incubator.concurrent</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- Surefire for unit tests  -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.plugin.version}</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>

            <!-- Shaded plugin for fat executable JAR file -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${shade.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>github.com.mstepan.grpc.examples.Main</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!--
            Enforcer plugin
            https://maven.apache.org/enforcer/maven-enforcer-plugin/
            -->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-enforcer-plugin</artifactId>-->
<!--                <version>${enforcer.plugin.version}</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>enforce</id>-->
<!--                        <goals>-->
<!--                            <goal>enforce</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <rules>-->
<!--                                <bannedPlugins>-->
<!--                                    &lt;!&ndash; will only display a warning but does not fail the build. &ndash;&gt;-->
<!--                                    <level>WARN</level>-->
<!--                                    <excludes>-->
<!--                                        <exclude>org.apache.maven.plugins:maven-verifier-plugin</exclude>-->
<!--                                    </excludes>-->
<!--                                    <message>Please consider using the maven-invoker-plugin-->
<!--                                        (http://maven.apache.org/plugins/maven-invoker-plugin/)!-->
<!--                                    </message>-->
<!--                                </bannedPlugins>-->

<!--                                <requireJavaVersion>-->
<!--                                    <version>21</version>-->
<!--                                </requireJavaVersion>-->
<!--                                <requireMavenVersion>-->
<!--                                    <version>3.6.3</version>-->
<!--                                </requireMavenVersion>-->
<!--                                <requireOS>-->
<!--                                    <family>unix</family>-->
<!--                                </requireOS>-->

<!--                                &lt;!&ndash;-->
<!--                                Dependency rules-->
<!--                                https://maven.apache.org/enforcer/enforcer-rules/index.html-->
<!--                                &ndash;&gt;-->
<!--                                <banDuplicatePomDependencyVersions/>-->
<!--                                <requireUpperBoundDeps/>-->
<!--                                <requireReleaseVersion>-->
<!--                                    <message>All SNAPSHOT dependencies banned!!!</message>-->
<!--                                </requireReleaseVersion>-->
<!--                            </rules>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->


        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-bom</artifactId>
                <version>${grpc.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit.bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- grpc -->
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-netty-shaded</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-protobuf</artifactId>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-services</artifactId>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-stub</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.tomcat</groupId>
            <artifactId>annotations-api</artifactId>
            <version>6.0.53</version>
            <scope>provided</scope> <!-- not needed at runtime -->
        </dependency>

        <!-- javax annotation -->
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>2.1.1</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito-version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

</project>
